--- a/list.html
+++ b/list.html
@@ -28,6 +28,20 @@
       background-color: #f0f0f0;
     }
 
+    button {
+      padding: 0.3rem 0.7rem;
+      font-size: 0.9rem;
+      border: none;
+      border-radius: 5px;
+      background-color: #e74c3c;
+      color: white;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #c0392b;
+    }
+
     @media (max-width: 600px) {
       table, thead, tbody, th, td, tr {
         display: block;
@@ -58,6 +72,7 @@
       td:nth-of-type(4)::before { content: "時間(h)"; }
       td:nth-of-type(5)::before { content: "天気"; }
       td:nth-of-type(6)::before { content: "メモ"; }
+      td:nth-of-type(7)::before { content: "操作"; }
     }
   </style>
 </head>
@@ -72,65 +87,8 @@
           <th>作業</th>
           <th>時間(h)</th>
           <th>天気</th>
-          <th>メモ</th><
-
-<table id="diaryTable">
-  <thead>
-    <tr>
-      <th>日付</th>
-      <th>作物</th>
-      <th>作業</th>
-      <th>時間(h)</th>
-      <th>天気</th>
-      <th>メモ</th>
-      <th>操作</th> 
-    </tr>
-  </thead>
-  <tbody></tbody>
-</table>
-
-<script>
-  const data = JSON.parse(localStorage.getItem("farmDiary") || "[]");
-  const tbody = document.querySelector("#diaryTable tbody");
-
-  // 新しい順に並び替え
-  data.sort((a, b) => new Date(b.date) - new Date(a.date));
-
-  if (data.length === 0) {
-    const row = document.createElement("tr");
-    const cell = document.createElement("td");
-    cell.colSpan = 7;
-    cell.textContent = "記録がありません。";
-    row.appendChild(cell);
-    tbody.appendChild(row);
-  } else {
-    data.forEach((entry, index) => {
-      const row = document.createElement("tr");
-
-      row.innerHTML = `
-        <td>${entry.date}</td>
-        <td>${entry.crop}</td>
-        <td>${entry.task}</td>
-        <td>${entry.time}</td>
-        <td>${entry.weather}</td>
-        <td>${entry.memo}</td>
-        <td><button onclick="deleteEntry(${index})">削除</button></td>
-      `;
-
-      tbody.appendChild(row);
-    });
-  }
-
-  function deleteEntry(index) {
-    if (confirm("この記録を削除しますか？")) {
-      const data = JSON.parse(localStorage.getItem("farmDiary") || "[]");
-      data.splice(index, 1);
-      localStorage.setItem("farmDiary", JSON.stringify(data));
-      location.reload(); // ページをリロードして再表示
-    }
-  }
-</script>
-
+          <th>メモ</th>
+          <th>操作</th>
         </tr>
       </thead>
       <tbody></tbody>
@@ -139,22 +97,22 @@
 
   <script>
     const data = JSON.parse(localStorage.getItem("farmDiary") || "[]");
-
-    // 最新のデータが上に来るように並び替え
-    data.sort((a, b) => new Date(b.date) - new Date(a.date));
-
     const tbody = document.querySelector("#diaryTable tbody");
+
+    // 新しい順に並び替え
+    data.sort((a, b) => new Date(b.date) - new Date(a.date));
 
     if (data.length === 0) {
       const row = document.createElement("tr");
       const cell = document.createElement("td");
-      cell.colSpan = 6;
+      cell.colSpan = 7;
       cell.textContent = "記録がありません。";
       row.appendChild(cell);
       tbody.appendChild(row);
     } else {
-      data.forEach(entry => {
+      data.forEach((entry, index) => {
         const row = document.createElement("tr");
+
         row.innerHTML = `
           <td>${entry.date}</td>
           <td>${entry.crop}</td>
@@ -162,9 +120,20 @@
           <td>${entry.time}</td>
           <td>${entry.weather}</td>
           <td>${entry.memo}</td>
+          <td><button onclick="deleteEntry(${index})">削除</button></td>
         `;
+
         tbody.appendChild(row);
       });
+    }
+
+    function deleteEntry(index) {
+      if (confirm("この記録を削除しますか？")) {
+        const data = JSON.parse(localStorage.getItem("farmDiary") || "[]");
+        data.splice(index, 1);
+        localStorage.setItem("farmDiary", JSON.stringify(data));
+        location.reload(); // ページをリロードして反映
+      }
     }
   </script>
 </body>
